--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <header>
           <h1>The Portfolio of Michelle McManus</h1>
-          <h2>Here you will find a collection of interesting things, a.k.a. my portfolio</h2>
+          <h2>Here you will find a collection of interesting things.</h2>
         </header>
 
         <section id="downloads" class="clearfix">
@@ -32,7 +32,7 @@
           <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Summary.</h3>
 
-<p>Storyteller. Survivor. Martial Artist. Hiker. Wannabe Guitarist. Ruby on Rails student. I'm told I change lives but this is probably what you want to read:</p>e
+<p>Storyteller. Survivor. Martial Artist. Hiker. Wannabe Guitarist. Ruby on Rails student. I'm told I change lives but this is probably what you want to read:</p>
 
 <p>I've spent the last 16+ years integrating and managing people, process and technology always with one foot in marketing and one foot in IT. </p>
 
