--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 
 <p>After a very traumatic layoff from AIG, I found myself aggressively seeking a new job. I had been out of practice for 16 years since prior to working at AIG, I stayed with a company for nearly 11 years as we grew the company from a regional provider of transportation and warehousing to a global logistics entity. I started my career there as a temp and had worked my way up the ladder and did quite well, gaining valuable experience. My next adventure came to me by way of referral so I was really not quite prepared to find myself suddenly without a paycheck and with a child in college and a child in high school... my anxiety level went through the roof. And while I actively started working all the angles, the contacts, listening to my coach and networking, I felt I needed to do something else which led me to plan b. Coding.</p>
             <p>Forutnately, I discovered <a href="http://www.skillcrush.com">SkillCrush</a>. There were so many other options but with the uncertainty of landing work soon, I had to take the most economical route. And so it goes that I enrolled in the Ruby on Rails blueprint.</p>
-            
+            <h3>SkillCrush</h3>
+            <p><a href="http://skillcrush.com/profile/mmcmanus/">My SkillCrush Profile</a>.</p>
             <h3>SkillCrush 104</h3>
             <p>My final 104 project was a weather app using the Rubygem Barometer. Check it out <a href="https://github.com/michelleisclever/weather-app">here</a>. The documentation left a lot to be desired and if you have a weather script built with Barometer you would like to share with me so I can learn, please connect with me on <a href="http://www.linkedin.com/in/mmcmanus">LinkedIn</a> and share.</p>
 
