--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         </header>
 
         <section id="downloads" class="clearfix">
-          <a href="https://github.com/michelleisclever" id="view-on-github" class="button"><span>My Github</span></a>
+          <a href="https://github.com/michelleisclever" id="view-on-github" class="button"><span>My Github</span></a> &nbsp; &nbsp;
+            <a href="documents/michelle-mcmanus-resume.pdf" id="view-resume" class="button"><span>My Resume</span></a>
         </section>
 
         <hr>
