--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
             <p><a href="http://skillcrush.com/profile/mmcmanus/">My SkillCrush Profile</a>.</p>
             <h3>SkillCrush 104</h3>
             <p>My final 104 project was a weather app using the Rubygem Barometer. Check it out <a href="https://github.com/michelleisclever/weather-app">here</a>. The documentation left a lot to be desired and if you have a weather script built with Barometer you would like to share with me so I can learn, please connect with me on <a href="http://www.linkedin.com/in/mmcmanus">LinkedIn</a> and share.</p>
+            
+            <h3>SkillCrush 204</h3>
+            <p>Monday begins a new level in my learning. I will start to learn about Sinatra and ActiveRecord. More to come.</p>
 
 <!--<h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
