--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
         <hr>
 
         <section id="main_content">
-            <h3>SkillCrush</h3>
-            <p><a href="http://skillcrush.com/profile/mmcmanus/">My SkillCrush Profile</a>.</p>
-            <h3>SkillCrush 104</h3>
+            <h3>My SkillCrush Portfolio</h3>
+            
+            <h4>SkillCrush 104</h4>
             <p>My final 104 project was a weather app using the Rubygem Barometer. Check it out <a href="https://github.com/michelleisclever/weather-app">here</a>. The documentation left a lot to be desired and if you have a weather script built with Barometer you would like to share with me so I can learn, please connect with me on <a href="http://www.linkedin.com/in/mmcmanus">LinkedIn</a> and share.</p>
             
-            <h3>SkillCrush 204</h3>
+            <h4>SkillCrush 204</h4>
             <p>Monday begins a new level in my learning. I will start to learn about Sinatra and ActiveRecord. More to come.</p>
           <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Summary.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>My Summary</h3>
 
 <p>Storyteller. Survivor. Martial Artist. Hiker. Wannabe Guitarist. Ruby on Rails student. I'm told I change lives but this is probably what you want to read:</p>
 
