--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
             <p>If you would like to know more about my professional identity, check me out on <a href="http://www.linkedin.com/in/mmcmanus">LinkedIn</a> and take a moment to read <a href="http://www.linkedin.com/in/mmcmanus#endorsements">what others say about me</a>. Read on below if you would like to hear more about my story.</p>
       
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Learning to code</h3>
-            <h4>The catalyst</h4>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>My Story</h3>
+            <h4>Learning to code: the catalyst</h4>
 
 <p>After a very traumatic layoff from AIG, I found myself aggressively seeking a new job. I had been out of practice for 16 years since prior to working at AIG, I stayed with a company for nearly 11 years as we grew the company from a regional provider of transportation and warehousing to a global logistics entity. I started my career there as a temp and had worked my way up the ladder and did quite well, gaining valuable experience and connections along the way. </p>
             <p>One of those connections led me to my next adventure at AIG. The position came to me by way of referral. It was a really exciting opportunity to try something new and gain more experience. So I took it even though I was not looking for a job. Now, can you imagine what it felt like to find yourself so suddenly out of a job? Yes, I had many connections but unfortunately, because the layoff took a toll on 700+ people all once (and I'm told it was really more like 1800), my connections were mostly not in the right frame of mind to help a girl out. Additionally, I threw s much of my time and effort into expanding connections across the country that my connections here at home were a little dusty.</p>
