--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <h4>No time to wallow</h4>
             <p>I put my mind to solving the problem and while I actively started working all the angles, the contacts, listening to my coach and networking, I felt I needed to do something else which led me to plan b. Coding.</p>
             <p>For the last 16 years, I have had one foot in marketing and one foot in IT. I literally have done almost everything at one point in tme or another. From being a LAN administrator, a Microsoft Dynamics CRM administrator to applying tape to the edge of a stapled book to create a collateral piece. I had done it all! However, many of the job postings are very specific or too broad.</p>
-            <p>Forutnately, I discovered <a href="http://www.skillcrush.com">SkillCrush</a>. There were so many other options but with the uncertainty of landing work soon, I had to take the most economical route. And so it goes that I enrolled in the Ruby on Rails blueprint.</p>
+            <p>Fortunately, I discovered <a href="http://www.skillcrush.com">SkillCrush</a>. There were so many other options but with the uncertainty of landing work soon, I had to take the most economical route. And so it goes that I enrolled in the Ruby on Rails blueprint.</p>
             
 
 
